# NMR2Boltz

./: .dockerignore  .gitattributes  .gitignore  BUILD_INFO.txt  Dockerfile  MANIFEST.sha256  Makefile  README.md  RELEASE_NOTES.md  VALIDATION.md  ci-constraints.txt  nmr_to_boltz.py  pyproject.toml  requirements.txt  test_report.txt
benchmark/: README.md  reviewed_baseline.json
docs/: BENCHMARK_DISCREPANCY_FINDINGS.md  BOLTZUI_UNION_EXTENSION.md  CLI_REFERENCE.md  EXPERT_REVIEW_CHECKLIST.md  FORMAT_RESEARCH_AND_DESIGN_DECISIONS.md  INTEGRATION_GUIDE.md  REFERENCES.md  SCIENTIFIC_METHOD.md
examples/: bond_lengths.json  example.nef  proposed_union_schema.yaml  residue_map.tsv  token_constraints.yaml
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: build_methods_pdf.py
tests/: test_atom_topology.py  test_benchmark.py  test_cli_documentation.py  test_constraint_output.py  test_conversion.py  test_corpus_benchmark.py  test_distance_check.py  test_distance_check_token.py  test_ensemble.py  test_intrachain_filter.py  test_intraresidue_filter.py  test_logic.py  test_nmrstar_expansion.py  test_robustness.py  test_target.py  test_token_constraints.py  test_topology.py
validation/: benchmark_corpus.py  compare_ensemble.py  custom_cli.txt  discrepancy_audit.py  distance_check.py  distance_check_token.py  engineering_status.txt  example_file_list.txt  final_status.txt  help.txt  nef_cli.txt  nmrstar_cli.txt  pip_bootstrap.txt  pip_install.txt  ruff_install.txt  stress_validation.py  (+1 more)
(+574 files in other folders)
