[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmr2boltz"
version = "0.1.0"
description = "Conservative projection of NEF/NMR-STAR proton distance restraints to Boltz heavy-atom contacts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI, prepared for the BoltzUI project"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pynmrstar>=3.3,<4",
  "PyYAML>=6,<7",
  "gemmi>=0.6.7,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
nmr2boltz = "nmr2boltz.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
